--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="assets/fonts/icomoon/style.css">
     <link rel="stylesheet" href="assets/fonts/flaticon/font/flaticon.css">
     <link rel="stylesheet" href="assets/css/aos.css">
+    
     <link rel="stylesheet" href="assets/css/style.css">
 
     <link rel="stylesheet" href="https://icons.iconscout.com">
@@ -130,7 +131,7 @@
 
     <!-- Header Start -->
     <div class="jumbotron jumbotron-fluid page-header position-relative overlay-bottom" style="margin-bottom: 90px;"> 
-      <div class="hero overlay" style="background-image: url('images/img-school-3-min.jpg');">
+      <div class="hero overlay" style="background-image: url('assets/imgs/about us.jpg');">
           <div class="container text-center py-5">
               <h1 class="text-white display-1">Who We Are?</h1>
               <div class="d-inline-flex text-white mb-5">
@@ -172,6 +173,13 @@
     <div class="container">
       <div class="row justify-content-between">
         <div class="col-lg-5 mb-5">
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
+            <div class="bg-1"></div>
+            <a href="https://vimeo.com/342333493" data-fancybox class="video-wrap">
+              <span class="play-wrap"><span class="icon-play"></span></span>
+              <img src="assets/imgs/about mtendere.jpg" alt="Image" class="img-fluid rounded">
+            </a>
+          </div>
           <h2 class="section-title mb-4" data-aos="fade-up">About Mtendere Education Consult</h2>
           <p class="lead text-muted" data-aos="fade-up" data-aos-delay="100">
             We are a registered organization under the <strong>Malawi Government Business Registration Act
@@ -227,7 +235,7 @@
           <div class="bg-1"></div>
           <a href="https://vimeo.com/342333493" data-fancybox class="video-wrap">
             <span class="play-wrap"><span class="icon-play"></span></span>
-            <img src="images/img-school-4-min.jpg" alt="Image" class="img-fluid rounded">
+            <img src="assets/imgs/about us 2.jpg" alt="Image" class="img-fluid rounded">
           </a>
         </div>
       </div>
@@ -263,7 +271,7 @@
         </div>
         <div class="col-lg-6" data-aos="fade-up" data-aos-delay="0">
           <figure class="img-wrap-2">
-            <img src="images/teacher-min.jpg" alt="Image" class="img-fluid">
+            <img src="assets/imgs/Application guidance.jpg" alt="Image" class="img-fluid">
             <div class="dotted"></div>
           </figure>
 
@@ -276,7 +284,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-5 mr-auto mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="0">
-          <img src="images/img-school-5-min.jpg" alt="image" class="img-fluid">
+          <img src="assets/imgs/Madam Brenda with Students.jpg" alt="image" class="img-fluid">
         </div>
         <div class="col-lg-7 ml-auto" data-aos="fade-up" data-aos-delay="100">
           <h3 class="line-bottom mb-4">Why Choose Us</h3>
@@ -294,7 +302,7 @@
                 <div class="accordion-body">
                   <div class="d-flex">
                     <div class="accordion-img mr-4">
-                      <img src="images/img-school-1-min.jpg" alt="Image" class="img-fluid">
+                      <img src="assets/imgs/mtendere.jpg" alt="Image" class="img-fluid">
                     </div>
                     <div>
                       <p>Profession tutors are not only skilled in their subjects but also understand the unique challenges
