--- a/event.html
+++ b/event.html
@@ -128,7 +128,7 @@
 
     <!-- Header Start -->
     <div class="jumbotron jumbotron-fluid page-header position-relative overlay-bottom" style="margin-bottom: 90px;"> 
-        <div class="hero overlay" style="background-image: url('images/img-school-3-min.jpg');">
+        <div class="hero overlay" style="background-image: url('assets/imgs/Events.jpg');">
             <div class="container text-center py-5">
                 <h1 class="text-white display-1">Courses</h1>
                 <div class="d-inline-flex text-white mb-5">
@@ -166,109 +166,14 @@
     </div> <!-- /.container -->
     <!-- Header End -->
     
-    <section id="event-body" class="container py-5">
-        <div id="event-page" class="container">
-            <h1>Events</h1>
-            <section>
-                <h2>2 December</h2>
-                <div class="grid-wrapper">
-                    <article>
-                        <h3>9:00 AM</h3>
-                        <p>Life finds a way. You know what? It is beets. </p>
-                    </article>
-                    <article>
-                        <h3>10:00 AM</h3>
-                        <p>I've crashed into a beet truck </p>
-                    </article>
-                    <article>
-                        <h3>12:30 AM</h3>
-                        <p>I was part of something special. </p>
-                    </article>
-                    <article>
-                        <h3>13:30 AM</h3>
-                        <p>Yeah, but your scientists were so preoccupied with whether or not they could, they didn't
-                            stop to think if they should. </p>
-                        <img src="https://images.fineartamerica.com/images-medium-large-5/maroon-bells-aspen-colorado-black-and-white-photography-by-sai.jpg"
-                            alt="Black and white photo of a lake">
-
-                    </article>
-                    <article>
-                        <h3>14:30 AM</h3>
-                        <p>Just my luck, no ice. God help us, we're in the hands of engineers. </p>
-                    </article>
-                    <article>
-                        <h3>15:30 AM</h3>
-                        <p>I gave it a cold? I gave it a virus. A computer virus. </p>
-                    </article>
-                    <article>
-                        <h3>16:30 AM</h3>
-                        <p>God creates dinosaurs. God destroys dinosaurs. God creates Man. Man destroys God. Man creates
-                            Dinosaurs. </p>
-                    </article>
-                    <article>
-                        <h3>17:30 AM</h3>
-                        <p>What do they got in there? King Kong? </p>
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c8/Eiffel_tower_at_Exposition_Universelle%2C_Paris%2C_1889.jpg/1200px-Eiffel_tower_at_Exposition_Universelle%2C_Paris%2C_1889.jpg"
-                            alt="Black and White Eiffel Tower"" alt=" Black and white Mountian view">
-                    </article>
-                </div>
-            </section>
-            <section>
-                <h2>3 Jan</h2>
-                <div class="grid-wrapper">
-                    <article>
-                        <h3>9:00 AM</h3>
-                        <p>Life finds a way. You know what? It is beets. </p>
-                    </article>
-                    <article>
-                        <h3>10:00 AM</h3>
-                        <p>I've crashed into a beet truck </p>
-                    </article>
-                    <article>
-                        <h3>12:30 AM</h3>
-                        <p>I was part of something special. </p>
-                    </article>
-                    <article>
-                        <h3>13:30 AM</h3>
-                        <p>Yeah, but your scientists were so preoccupied with whether or not they could, they didn't
-                            stop to think if they should. </p>
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c8/Eiffel_tower_at_Exposition_Universelle%2C_Paris%2C_1889.jpg/1200px-Eiffel_tower_at_Exposition_Universelle%2C_Paris%2C_1889.jpg"
-                            alt="Black and White Eiffel Tower">
-                    </article>
-                    <article>
-                        <h3>14:30 AM</h3>
-                        <p>Just my luck, no ice. God help us, we're in the hands of engineers. </p>
-                    </article>
-                    <article>
-                        <h3>15:30 AM</h3>
-                        <p>I gave it a cold? I gave it a virus. A computer virus. </p>
-                    </article>
-                    <article>
-                        <h3>16:30 AM</h3>
-                        <p>God creates dinosaurs. God destroys dinosaurs. God creates Man. Man destroys God. Man creates
-                            Dinosaurs. </p>
-                    </article>
-                    <article>
-                        <h3>17:30 AM</h3>
-                        <p>What do they got in there? King Kong? </p>
-                        <img src="https://images.fineartamerica.com/images-medium-large-5/maroon-bells-aspen-colorado-black-and-white-photography-by-sai.jpg"
-                            alt="Black and white Mountian view">
-                    </article>
-                </div>
-            </section>
-            <p class="footer-note">Design by <a
-                    href="https://dribbble.com/shots/8576480-Book-Festival-Responsive-Website">tubik</a></p>
-        </div>
-    </section>
-
     <!-- Events Start -->
     <div class="container-fluid events py-5">
         <div class="container py-5">
             <div class="pb-5">
                 <div class="row g-4 align-items-end">
                     <div class="col-xl-8">
-                        <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Events</h4>
-                        <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s">Upcoming Events</h1>
+                        <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Our Events</h4>
+                        <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s">Upcoming Educational Activities</h1>
                     </div>
                     <div class="col-xl-4 text-xl-end pb-3 wow fadeInUp" data-wow-delay="0.3s">
                         <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="#">View All Events</a>
@@ -276,91 +181,75 @@
                 </div>
             </div>
             <div class="row g-4 justify-content-center">
+                <!-- Event 1 -->
                 <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="event-item rounded">
                         <div class="position-relative">
-                            <img src="img/service-1.jpg" class="img-fluid rounded-top w-100" alt="Image">
-                            <div class="bg-primary text-white fw-bold rounded d-inline-block position-absolute p-2"
-                                style="top: 0; right: 0;">JAN 20</div>
-                            <div class="d-flex justify-content-between border-start border-end bg-white px-2 py-2 w-100 position-absolute"
-                                style="bottom: 0; left: 0; opacity: 0.8;">
-                                <a href="#" class="text-dark"><i class="fas fa-clock text-primary"></i> 08:00AM -
-                                    10:00PM</a>
-                                <a href="#" class="text-dark"><span class="fas fa-map-marker-alt text-primary"></span>
-                                    New York</a>
+                            <img src="assets/imgs/education-fair.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                            <div class="bg-primary text-white fw-bold rounded d-inline-block position-absolute p-2" style="top: 0; right: 0;">MAY 10</div>
+                            <div class="d-flex justify-content-between border-start border-end bg-white px-2 py-2 w-100 position-absolute" style="bottom: 0; left: 0; opacity: 0.8;">
+                                <a href="#" class="text-dark"><i class="fas fa-clock text-primary"></i> 09:00AM - 4:00PM</a>
+                                <a href="#" class="text-dark"><span class="fas fa-map-marker-alt text-primary"></span> Blantyre</a>
                             </div>
                         </div>
                         <div class="border border-top-0 rounded-bottom p-4">
-                            <a href="#" class="h4 mb-3 d-block">Open House - Springs Dance</a>
-                            <p class="mb-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni vero
-                                excepturi blanditiis quidem</p>
-                            <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="#">Watch Now</a>
+                            <a href="#" class="h4 mb-3 d-block">University Scholarship Fair</a>
+                            <p class="mb-3">Explore top university programs and scholarships for Malawian students. Engage with counselors and alumni.</p>
+                            <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="#">Register</a>
                         </div>
                     </div>
                 </div>
+                <!-- Event 2 -->
                 <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="event-item rounded">
                         <div class="position-relative">
-                            <img src="img/service-2.jpg" class="img-fluid rounded-top w-100" alt="Image">
-                            <div class="bg-primary text-white rounded d-inline-block position-absolute p-2"
-                                style="top: 0; right: 0;">JUN 30</div>
-                            <div class="d-flex justify-content-between border-start border-end bg-white px-2 py-2 w-100 position-absolute"
-                                style="bottom: 0; left: 0; opacity: 0.8;">
-                                <a href="#" class="text-dark"><i class="fas fa-clock text-primary"></i> 08:00AM -
-                                    10:00PM</a>
-                                <a href="#" class="text-dark"><span class="fas fa-map-marker-alt text-primary"></span>
-                                    New York</a>
+                            <img src="assets/imgs/admission-drive.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                            <div class="bg-primary text-white rounded d-inline-block position-absolute p-2" style="top: 0; right: 0;">JUN 05</div>
+                            <div class="d-flex justify-content-between border-start border-end bg-white px-2 py-2 w-100 position-absolute" style="bottom: 0; left: 0; opacity: 0.8;">
+                                <a href="#" class="text-dark"><i class="fas fa-clock text-primary"></i> 10:00AM - 2:00PM</a>
+                                <a href="#" class="text-dark"><span class="fas fa-map-marker-alt text-primary"></span> Lilongwe</a>
                             </div>
                         </div>
                         <div class="border rounded-bottom p-4">
-                            <a href="#" class="h4 mb-3 d-block">Open House And Registration</a>
-                            <p class="mb-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni vero
-                                excepturi blanditiis quidem</p>
-                            <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="#">Watch Now</a>
+                            <a href="#" class="h4 mb-3 d-block">On-Spot University Admissions</a>
+                            <p class="mb-3">Get assessed instantly for admission opportunities with our partner universities across the globe.</p>
+                            <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="#">Apply Now</a>
                         </div>
                     </div>
                 </div>
+                <!-- Event 3 -->
                 <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="event-item rounded">
                         <div class="position-relative">
-                            <img src="img/service-3.jpg" class="img-fluid rounded-top w-100" alt="Image">
-                            <div class="bg-primary text-white rounded d-inline-block position-absolute p-2"
-                                style="top: 0; right: 0;">MAY 15</div>
-                            <div class="d-flex justify-content-between border-start border-end bg-white px-2 py-2 w-100 position-absolute"
-                                style="bottom: 0; left: 0; opacity: 0.8;">
-                                <a href="#" class="text-dark"><i class="fas fa-clock text-primary"></i> 08:00AM -
-                                    10:00PM</a>
-                                <a href="#" class="text-dark"><span class="fas fa-map-marker-alt text-primary"></span>
-                                    New York</a>
+                            <img src="assets/imgs/virtual-consultation.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                            <div class="bg-primary text-white rounded d-inline-block position-absolute p-2" style="top: 0; right: 0;">JUL 12</div>
+                            <div class="d-flex justify-content-between border-start border-end bg-white px-2 py-2 w-100 position-absolute" style="bottom: 0; left: 0; opacity: 0.8;">
+                                <a href="#" class="text-dark"><i class="fas fa-clock text-primary"></i> 12:00PM - 5:00PM</a>
+                                <a href="#" class="text-dark"><span class="fas fa-map-marker-alt text-primary"></span> Online</a>
                             </div>
                         </div>
                         <div class="border rounded-bottom p-4">
-                            <a href="#" class="h4 mb-3 d-block">Open House Morris Dance</a>
-                            <p class="mb-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni vero
-                                excepturi blanditiis quidem</p>
-                            <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="#">Watch Now</a>
+                            <a href="#" class="h4 mb-3 d-block">Virtual Student Consultation</a>
+                            <p class="mb-3">Book a one-on-one session with our education advisors to guide your international study journey.</p>
+                            <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="#">Book Now</a>
                         </div>
                     </div>
                 </div>
+                <!-- Event 4 -->
                 <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.7s">
                     <div class="event-item rounded">
                         <div class="position-relative">
-                            <img src="img/service-4.jpg" class="img-fluid rounded-top w-100" alt="Image">
-                            <div class="bg-primary text-white rounded d-inline-block position-absolute p-2"
-                                style="top: 0; right: 0;">APR 2</div>
-                            <div class="d-flex justify-content-between border-start border-end bg-white px-2 py-2 w-100 position-absolute"
-                                style="bottom: 0; left: 0; opacity: 0.8;">
-                                <a href="#" class="text-dark"><i class="fas fa-clock text-primary"></i> 08:00AM -
-                                    10:00PM</a>
-                                <a href="#" class="text-dark"><span class="fas fa-map-marker-alt text-primary"></span>
-                                    New York</a>
+                            <img src="assets/imgs/career-workshop.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                            <div class="bg-primary text-white rounded d-inline-block position-absolute p-2" style="top: 0; right: 0;">AUG 20</div>
+                            <div class="d-flex justify-content-between border-start border-end bg-white px-2 py-2 w-100 position-absolute" style="bottom: 0; left: 0; opacity: 0.8;">
+                                <a href="#" class="text-dark"><i class="fas fa-clock text-primary"></i> 09:30AM - 1:30PM</a>
+                                <a href="#" class="text-dark"><span class="fas fa-map-marker-alt text-primary"></span> Mzuzu</a>
                             </div>
                         </div>
                         <div class="border rounded-bottom p-4">
-                            <a href="#" class="h4 mb-3 d-block">Open House Dance Studio</a>
-                            <p class="mb-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni vero
-                                excepturi blanditiis quidem</p>
-                            <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="#">Watch Now</a>
+                            <a href="#" class="h4 mb-3 d-block">Career Guidance Workshop</a>
+                            <p class="mb-3">Helping students discover the best paths in global education, including visa processes and career planning.</p>
+                            <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="#">Join Now</a>
                         </div>
                     </div>
                 </div>
