--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     
-    <title>Success Stories | Mtendere Education Consult - Study Abroad Malawi</title>
+    <title>Mtendere Education Consult - Study Abroad Malawi</title>
     <meta name="description" content="Discover inspiring success stories of students from Malawi who achieved their international education dreams with Mtendere Education Consult. Start your journey today.">
     <meta name="keywords" content="Mtendere Education Consult, Malawi Students Abroad, Study Abroad Malawi, Success Stories, International Education, Scholarships Malawi, Study in India, Study in USA, Study in Canada, Education Consultancy Malawi">
     <meta property="og:title" content="Success Stories - Mtendere Education Consult">
@@ -14,7 +14,6 @@
     <meta name="twitter:card" content="summary_large_image">
     <link rel="canonical" href="https://www.mtendereeducation.com/success-stories">
 
-
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/animate.min.css">
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
@@ -22,22 +21,15 @@
     <link rel="stylesheet" href="assets/css/jquery.fancybox.min.css">
     <link rel="stylesheet" href="assets/fonts/icomoon/style.css">
     <link rel="stylesheet" href="assets/fonts/flaticon/font/flaticon.css">
-    <link rel="stylesheet" href="assets/css/aos.css">
-    <link rel="stylesheet" href="assets/css/style.css">
 
     <!-- SwiperJS CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
-
-    <!-- AOS CSS -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
 </head>
 
 <body>
     <div id="loadingSpinner">
         <div class="spinner"></div>
     </div>
-    
     <!-- Mobile Menu -->
     <div class="site-mobile-menu">
         <div class="site-mobile-menu-header">
@@ -237,7 +229,6 @@
                         </div>
                     </a>
                 </div>
-
 
                 <div class="col-sm-6 col-md-6 col-lg-3 mb-4" data-aos="fade-up" data-aos-delay="0">
                     <a href="#" class="category d-flex align-items-start h-100">
