--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
     <link rel="stylesheet" href="assets/fonts/icomoon/style.css">
     <link rel="stylesheet" href="assets/fonts/flaticon/font/flaticon.css">
 
-    <!-- SwiperJS CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
