--- a/blog.html
+++ b/blog.html
@@ -253,7 +253,7 @@
                 <div class="col-lg-6 mb-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="media-h d-flex h-100">
                         <figure>
-                            <img src="images/caroline-tembo.jpg" alt="Caroline Tembo Graduation Image">
+                            <img src="assets/imgs/students/Carloline.jpg" alt="Caroline Tembo Graduation Image">
                         </figure>
                         <div class="media-h-body">
                             <h2 class="mb-3"><a href="#">Caroline Tembo - Commerce Graduate from PCTE India</a></h2>
@@ -270,7 +270,7 @@
                 <div class="col-lg-6 mb-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="media-h d-flex h-100">
                         <figure>
-                            <img src="images/janet-kandulu.jpg" alt="Janet Kandulu Graduation Image">
+                            <img src="assets/imgs/students/Janet Kandulu.jpg" alt="Janet Kandulu Graduation Image">
                         </figure>
                         <div class="media-h-body">
                             <h2 class="mb-3"><a href="#">Janet Kandulu - Bs in Nutrition and Dietetics</a></h2>
@@ -287,7 +287,7 @@
                 <div class="col-lg-6 mb-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="media-h d-flex h-100">
                         <figure>
-                            <img src="images/chikondi-mangani.jpg" alt="Chikondi Mangani Graduation Image">
+                            <img src="assets/imgs/students/Trust Chikondi Mangani.jpg" alt="Chikondi Mangani Graduation Image">
                         </figure>
                         <div class="media-h-body">
                             <h2 class="mb-3"><a href="#">Chikondi Mangani - BSc in Cybersecurity</a></h2>
@@ -304,7 +304,7 @@
                 <div class="col-lg-6 mb-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="media-h d-flex h-100">
                         <figure>
-                            <img src="images/edna-karonga.jpg" alt="Edna Karonga Graduation Image">
+                            <img src="assets/imgs/students/Edna Kalonga.jpg" alt="Edna Karonga Graduation Image">
                         </figure>
                         <div class="media-h-body">
                             <h2 class="mb-3"><a href="#">Edna Karonga - MBA Graduate from Chandigarh University</a></h2>
@@ -321,7 +321,7 @@
                 <div class="col-lg-6 mb-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="media-h d-flex h-100">
                         <figure>
-                            <img src="images/ian-ndola.jpg" alt="Ian Ndola Graduation Image">
+                            <img src="assets/imgs/students/Ian Ndola.jpg" alt="Ian Ndola Graduation Image">
                         </figure>
                         <div class="media-h-body">
                             <h2 class="mb-3"><a href="#">Ian Ndola - MBA Graduate from University of Alabama</a></h2>
@@ -338,7 +338,7 @@
                 <div class="col-lg-6 mb-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="media-h d-flex h-100">
                         <figure>
-                            <img src="images/mirabel-lopote.jpg" alt="Mirabel Lopote Graduation Image">
+                            <img src="assets/imgs/students/Mirabel lopote.jpg" alt="Mirabel Lopote Graduation Image">
                         </figure>
                         <div class="media-h-body">
                             <h2 class="mb-3"><a href="#">Mirabel Lopote - Masters in Fashion Design Graduate</a></h2>
@@ -355,7 +355,7 @@
                 <div class="col-lg-6 mb-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="media-h d-flex h-100">
                         <figure>
-                            <img src="images/lexina-kumwenda.jpg" alt="Lexina Kumwenda Graduation Image">
+                            <img src="assets/imgs/students/Lexina Kumwenda.jpg" alt="Lexina Kumwenda Graduation Image">
                         </figure>
                         <div class="media-h-body">
                             <h2 class="mb-3"><a href="#">Lexina Kumwenda - BSc Interior Design Graduate</a></h2>
