--- a/blog.html
+++ b/blog.html
@@ -397,7 +397,7 @@
                 <div class="col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="news-card h-100">
                         <figure>
-                            <img src="images/admission-deadlines.jpg" alt="Admission Deadlines">
+                            <img src="assets/imgs/Application and registration.jpg" alt="Admission Deadlines">
                         </figure>
                         <div class="news-card-body">
                             <h3 class="news-title"><a href="#">Important Admission Deadlines for 2024 Intake</a></h3>
@@ -414,7 +414,7 @@
                 <div class="col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="news-card h-100">
                         <figure>
-                            <img src="images/visa-application.jpg" alt="Visa Application Process">
+                            <img src="assets/imgs/International Admissions Director from Chandigarh University.jpg" alt="Visa Application Process">
                         </figure>
                         <div class="news-card-body">
                             <h3 class="news-title"><a href="#">Latest Visa Application Updates for Malawian Students</a></h3>
@@ -431,7 +431,7 @@
                 <div class="col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="news-card h-100">
                         <figure>
-                            <img src="images/scholarships.jpg" alt="Scholarship Opportunities">
+                            <img src="assets/imgs/KA student Recruitment with Ms Brenda.jpg" alt="Scholarship Opportunities">
                         </figure>
                         <div class="news-card-body">
                             <h3 class="news-title"><a href="#">Explore New Scholarship Programs for 2025</a></h3>
@@ -448,7 +448,7 @@
                 <div class="col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="400">
                     <div class="news-card h-100">
                         <figure>
-                            <img src="images/career-interview.jpg" alt="Career Interview Preparation">
+                            <img src="assets/imgs/Application and registration.jpg" alt="Career Interview Preparation">
                         </figure>
                         <div class="news-card-body">
                             <h3 class="news-title"><a href="#">Join Our Career Interview Preparation Workshop</a></h3>
@@ -465,7 +465,7 @@
                 <div class="col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="500">
                     <div class="news-card h-100">
                         <figure>
-                            <img src="images/study-abroad-event.jpg" alt="Study Abroad Virtual Event">
+                            <img src="assets/imgs/International Admissions Director from Chandigarh University.jpg" alt="Study Abroad Virtual Event">
                         </figure>
                         <div class="news-card-body">
                             <h3 class="news-title"><a href="#">Study Abroad Virtual Meet-Up with University Representatives</a></h3>
@@ -482,7 +482,7 @@
                 <div class="col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="600">
                     <div class="news-card h-100">
                         <figure>
-                            <img src="images/event-planning-tips.jpg" alt="Event Planning Tips">
+                            <img src="assets/imgs/Mount Sinai Internation Exhibitions.jpg" alt="Event Planning Tips">
                         </figure>
                         <div class="news-card-body">
                             <h3 class="news-title"><a href="#">Top Tips for Planning Your Study Abroad Journey</a></h3>
