--- a/blog.html
+++ b/blog.html
@@ -591,8 +591,8 @@
         <div class="container mt-5 pt-5">
             <div class="row">
                 <div class="col-md-6 mb-5">
-                    <a href="index.html" class="navbar-brand">
-                        <a class="navbar-brand" href="#" image src="img/Mtendere_logo.png"></a>
+                    <a href="index.html" class="logo">
+                        <a class="" href="#" image src="img/Mtendere_logo.png"></a>
                     </a>
                     <p class="m-0">
                         Mtendere Education Consult is a leading online education company dedicated to providing
