--- a/event.html
+++ b/event.html
@@ -185,7 +185,7 @@
                 <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="event-item rounded">
                         <div class="position-relative">
-                            <img src="assets/imgs/education-fair.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                            <img src="assets/imgs/event 4.jpg" class="img-fluid rounded-top w-100" alt="Image">
                             <div class="bg-primary text-white fw-bold rounded d-inline-block position-absolute p-2" style="top: 0; right: 0;">MAY 10</div>
                             <div class="d-flex justify-content-between border-start border-end bg-white px-2 py-2 w-100 position-absolute" style="bottom: 0; left: 0; opacity: 0.8;">
                                 <a href="#" class="text-dark"><i class="fas fa-clock text-primary"></i> 09:00AM - 4:00PM</a>
@@ -203,7 +203,7 @@
                 <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="event-item rounded">
                         <div class="position-relative">
-                            <img src="assets/imgs/admission-drive.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                            <img src="assets/imgs/Events 2.jpg" class="img-fluid rounded-top w-100" alt="Image">
                             <div class="bg-primary text-white rounded d-inline-block position-absolute p-2" style="top: 0; right: 0;">JUN 05</div>
                             <div class="d-flex justify-content-between border-start border-end bg-white px-2 py-2 w-100 position-absolute" style="bottom: 0; left: 0; opacity: 0.8;">
                                 <a href="#" class="text-dark"><i class="fas fa-clock text-primary"></i> 10:00AM - 2:00PM</a>
@@ -221,7 +221,7 @@
                 <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="event-item rounded">
                         <div class="position-relative">
-                            <img src="assets/imgs/virtual-consultation.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                            <img src="assets/imgs/Atsikana Paulendo Career Talks.jpg" class="img-fluid rounded-top w-100" alt="Image">
                             <div class="bg-primary text-white rounded d-inline-block position-absolute p-2" style="top: 0; right: 0;">JUL 12</div>
                             <div class="d-flex justify-content-between border-start border-end bg-white px-2 py-2 w-100 position-absolute" style="bottom: 0; left: 0; opacity: 0.8;">
                                 <a href="#" class="text-dark"><i class="fas fa-clock text-primary"></i> 12:00PM - 5:00PM</a>
@@ -239,7 +239,7 @@
                 <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.7s">
                     <div class="event-item rounded">
                         <div class="position-relative">
-                            <img src="assets/imgs/career-workshop.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                            <img src="assets/imgs/Event 1.jpg" class="img-fluid rounded-top w-100" alt="Image">
                             <div class="bg-primary text-white rounded d-inline-block position-absolute p-2" style="top: 0; right: 0;">AUG 20</div>
                             <div class="d-flex justify-content-between border-start border-end bg-white px-2 py-2 w-100 position-absolute" style="bottom: 0; left: 0; opacity: 0.8;">
                                 <a href="#" class="text-dark"><i class="fas fa-clock text-primary"></i> 09:30AM - 1:30PM</a>
@@ -257,60 +257,6 @@
         </div>
     </div>
     <!-- Events End -->
-
-
-    <!-- Counter Facts Start -->
-    <div class="container-fluid counter-facts py-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 col-sm-6 col-md-6 col-xl-3 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="counter">
-                        <div class="counter-icon w-100 d-flex align-items-center justify-content-center">
-                            <h3>Dance Classes</h3>
-                        </div>
-                        <div class="counter-content d-flex align-items-center justify-content-center mt-4">
-                            <span class="counter-value" data-toggle="counter-up">158</span>
-                            <h4 class="text-secondary mb-0" style="font-weight: 600; font-size: 25px;">+</h4>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-md-6 col-xl-3 wow fadeInUp" data-wow-delay="0.3s">
-                    <div class="counter">
-                        <div class="counter-icon w-100 d-flex align-items-center justify-content-center">
-                            <h3>Best Instructor</h3>
-                        </div>
-                        <div class="counter-content d-flex align-items-center justify-content-center mt-4">
-                            <span class="counter-value" data-toggle="counter-up">49</span>
-                            <h4 class="text-secondary mb-0" style="font-weight: 600; font-size: 25px;">+</h4>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-md-6 col-xl-3 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="counter">
-                        <div class="counter-icon w-100 d-flex align-items-center justify-content-center">
-                            <h3>Total Brunch</h3>
-                        </div>
-                        <div class="counter-content d-flex align-items-center justify-content-center mt-4">
-                            <span class="counter-value" data-toggle="counter-up">17</span>
-                            <h4 class="text-secondary mb-0" style="font-weight: 600; font-size: 25px;">+</h4>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-md-6 col-xl-3 wow fadeInUp" data-wow-delay="0.7s">
-                    <div class="counter">
-                        <div class="counter-icon w-100 d-flex align-items-center justify-content-center">
-                            <h3>Happy customer</h3>
-                        </div>
-                        <div class="counter-content d-flex align-items-center justify-content-center mt-4">
-                            <span class="counter-value" data-toggle="counter-up">567</span>
-                            <h4 class="text-secondary mb-0" style="font-weight: 600; font-size: 25px;">+</h4>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Counter Facts End -->
 
     <!-- Events Section Start -->
     <section id="events" class="events py-5 bg-light">
